--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "aos": "^2.3.4",
+    "facepaint": "^1.2.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/facepaint": "^1.2.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
